# artex-ai-voice

./: .env.template  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
artex_agent/: .env.template  .gitignore  Dockerfile  README.md  TESTING_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
artex_agent/frontend/: .env.template  .gitignore  postcss.config.js
artex_agent/frontend/src/: App.tsx  index.css
artex_agent/frontend/src/components/: MessageList.tsx
artex_agent/frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
artex_agent/migrations/: env.py
artex_agent/migrations/versions/: 0001_create_artex_schema.py  0001_create_arthex_schema.py
artex_agent/prompts/: system_context.txt
artex_agent/src/: __init__.py  agent.py  agent_service.py  api_models.py  asr.py  database.py  database_models.py  database_repositories.py  gemini_client.py  livekit_integration.py  livekit_participant_handler.py  logging_config.py  main.py  tts.py
artex_agent/src/livekit_rtc_stubs/: README_FOR_GRPC_STUBS.txt  livekit_rtc_pb2_grpc.py
frontend/: .env.template  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatMessage.tsx  InputArea.tsx
frontend/src/components/ui/: scroll-area.tsx
migrations/: script.py.mako
src/: agent.py  agent_service.py  database.py  gemini_client.py  gemini_tools.py  livekit_integration.py  logging_config.py  main.py
src/livekit_rtc_stubs/: __init__.py  livekit_rtc_pb2.py
tests/: test_agent.py
