# artex_agent/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artex_agent"
version = "0.2.1" # Incrementing version due to corrective actions
authors = [
  { name="AI Agent (Jules) / Artex Development Team", email="dev@artex-assurances.example.com" }, # Made author more generic
]
description = "AI Voice Assistant for ARTEX ASSURANCES with Gemini, Database, and LiveKit integration."
readme = "README.md"
requires-python = ">=3.9" # Based on SQLAlchemy 2 and other modern libraries

# Corrected Classifiers
classifiers = [
    "Development Status :: 3 - Alpha", # Appropriate for current stage
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Telephony",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License", # Assuming MIT, confirm if different
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]

# Dependencies - This list should exactly match requirements.txt after previous step
dependencies = [
    "python-dotenv==0.21.1",
    "google-generativeai==0.7.1",
    "SQLAlchemy[asyncio]==2.0.30",
    "aiomysql==0.2.0",
    "alembic==1.13.1",
    "SpeechRecognition==3.10.4",
    "PyAudio==0.2.14",
    "gTTS==2.5.1",
    "pygame==2.5.2",
    "google-cloud-texttospeech==2.14.0",
    "pydub==0.25.1",
    "livekit==1.5.2",
    "grpcio==1.60.1",
    "grpcio-tools==1.60.1",
    "protobuf==4.25.3",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.8.2",
    "structlog==24.2.0",
    "cryptography==42.0.8",
    "pytest==8.2.2",
    "sentry-sdk[fastapi]==1.40.0", # Added Sentry SDK
]

[project.scripts]
# No command-line scripts defined for installation yet
# artex-agent-cli = "artex_agent.agent:main_cli_entry_point" # Example if agent.py had a main()

[project.urls]
"Homepage" = "https_github.com_artex-assurances_artex-agent" # Example placeholder
"Bug Tracker" = "https_github.com_artex-assurances_artex-agent_issues" # Example placeholder
# Replace example.com with actual URLs if available, or remove/comment out if not.
# For subtask, using placeholders is fine if actual URLs aren't known.
# Corrected placeholder URLs (cannot use real URLs for this example)
# "Homepage" = "https://example.com/artex_agent"
# "Bug Tracker" = "https://example.com/artex_agent/issues"
# For the sake of the subtask, let's use slightly more generic placeholders if the above don't pass validation
"Repository" = "https://example.com/artex-agent" # Generic placeholder
